--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/willygodwin/README-Generator/issues"
   },
-  "homepage": "https://github.com/willygodwin/README-Generator#readme"
+  "homepage": "https://github.com/willygodwin/README-Generator#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3"
+  }
 }
